<resources>
    <string name="app_name">Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Состав числа</string>
    <string name="pravila">Правила игры:потом...</string>
    <string name="btn">Окей</string>
    <string name="level_text">Выберите уровень</string>
    <string name="test_button">Тестовый</string>
    <string name="easy_button">Легкий</string>
    <string name="normal_button">Средний</string>
    <string name="hard_button">Тяжелый</string>
</resources>